# lidar-camera-calib-utils-2026

./: .gitignore  LICENSE  README.md  collect_data.py  crossValidation.py  imgui.ini  inspector.py  notes.md  pnp_demo.py  publish_camera_info.py
Camera/: HKCam.py
Livox-SDK/sdk_core/: CMakeLists.txt
camera_locator/: point_picker.py
parameters/: lidar_camera.txt  ost.yaml
src/hnurm_camera/: CMakeLists.txt  README.md  package.xml
src/hnurm_camera/include/hnurm_camera/: Camera.h  MvCameraControl.h  camera_node.hpp
src/hnurm_camera/launch/: calib.launch.py  hnurm_camera.launch.py
src/hnurm_camera/params/: default.yaml
src/hnurm_camera/src/: Camera.cpp  camera_node.cpp  main.cpp
src/livox_ros2_driver/livox_interfaces/: CMakeLists.txt
src/livox_ros2_driver/livox_ros2_driver/: CMakeLists.txt
src/livox_ros2_driver/livox_ros2_driver/config/: livox_lidar_config.json
src/livox_ros2_driver/livox_ros2_driver/launch/: livox_lidar_composition_launch.py
src/livox_ros2_driver/livox_ros2_driver/livox_ros2_driver/: lddc.cpp
src/livox_ros2_driver/livox_ros2_driver/timesync/: timesync.cpp
src/livox_ros2_driver/livox_sdk_vendor/: CMakeLists.txt
