<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hnurm_camera</name>
    <version>0.0.1</version>
    <description>TODO: Package description</description>
    <maintainer email="1422776724@qq.com">yc</maintainer>
    <license>MIT License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>OpenCV</depend>
    <depend>cv_bridge</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>camera_info_manager</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
